pkg나누기
